Fix: toggleChip dark mode button backgroundColor 설정

--- a/src/pages/resume/filter/filterOption.scss
+++ b/src/pages/resume/filter/filterOption.scss
@@ -38,7 +38,7 @@
             background-color: $white-color;
           }
           &--dark {
-            background-color: $grey-color;
+            background-color: inherit;
           }
         }
       }
